k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-petclinic
  name: spring-petclinic
spec:
  replicas: 1
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
        - image: quay.io/deepaked/spring-petclinic:v0.0.11
          imagePullPolicy: Always
          name: spring-petclinic
          ports:
            - containerPort: 8080
              protocol: TCP
