k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pet-clinic
  name: pet-clinic
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: pet-clinic
