k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pet-clinic
  name: pet-clinic
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pet-clinic
    weight: 100
